working with XML file

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -8,11 +8,25 @@
 <body>
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
-<tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">89</td><td></td><td></td></tr>
+<tr><th colspan="8">CRM Basics</th></tr>
+<tr><td><a href="#t0">Login</a></td><td class="num">6</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">103</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">ActivityReport</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">11</td><td></td><td></td></tr>
+<tr><td><a href="#t2">Settings</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">19</td><td></td><td></td></tr>
+<tr><th>Total</th><th class="num">10</th><th class="num">0</th><th class="num">0</th><th class="num">0</th><th class="num">133</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">Test.day1</td><td><a href="#m0">Demo</a></td><td rowspan="1">1649649313782</td><td rowspan="1">12</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">CRM Basics</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Login &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">Test.day1</td><td><a href="#m0">LoginAPICRM</a></td><td rowspan="1">1649651522537</td><td rowspan="1">13</td></tr><tr class="passedeven"><td><a href="#m1">MobileLoginCRM</a></td><td rowspan="1">1649651522554</td><td rowspan="1">6</td></tr><tr class="passedeven"><td><a href="#m2">WebLoginCRM</a></td><td rowspan="1">1649651522566</td><td rowspan="1">2</td></tr><tr class="passedodd"><td rowspan="3">Test.day2</td><td><a href="#m3">LoginAPICRMDashboard</a></td><td rowspan="1">1649651522576</td><td rowspan="1">4</td></tr><tr class="passedodd"><td><a href="#m4">MobileLoginCRMDashboard</a></td><td rowspan="1">1649651522581</td><td rowspan="1">3</td></tr><tr class="passedodd"><td><a href="#m5">WebLoginCRMDashboard</a></td><td rowspan="1">1649651522586</td><td rowspan="1">2</td></tr></tbody>
+<tbody id="t1"><tr><th colspan="4">ActivityReport &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">Test.day3</td><td><a href="#m6">CRMActivityList</a></td><td rowspan="1">1649651522732</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m7">CRMReports</a></td><td rowspan="1">1649651522735</td><td rowspan="1">3</td></tr></tbody>
+<tbody id="t2"><tr><th colspan="4">Settings &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">Test.day4</td><td><a href="#m8">CRMUserList</a></td><td rowspan="1">1649651522754</td><td rowspan="1">2</td></tr><tr class="passedeven"><td><a href="#m9">CRMUserProfile</a></td><td rowspan="1">1649651522760</td><td rowspan="1">2</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">Test.day1#Demo</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Login</h2><h3 id="m0">Test.day1#LoginAPICRM</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">Test.day1#MobileLoginCRM</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">Test.day1#WebLoginCRM</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">Test.day2#LoginAPICRMDashboard</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">Test.day2#MobileLoginCRMDashboard</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">Test.day2#WebLoginCRMDashboard</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>ActivityReport</h2><h3 id="m6">Test.day3#CRMActivityList</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m7">Test.day3#CRMReports</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Settings</h2><h3 id="m8">Test.day4#CRMUserList</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m9">Test.day4#CRMUserProfile</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
