--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a9a8e4">  <td>22/04/10 23:55:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day1.Demo()[pri:0, instance:Test.day1@f381794]">Demo</td> 
-  <td>main@741730375</td>   <td></td> </tr>
+<tr bgcolor="a9a8e4">  <td>22/04/11 00:07:11</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day1.Demo()[pri:0, instance:Test.day1@2cdd0d4b]">Demo</td> 
+  <td>main@1876443073</td>   <td></td> </tr>
+<tr bgcolor="a9a8e4">  <td>22/04/11 00:07:11</td>   <td>22</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day1.Demo2()[pri:0, instance:Test.day1@2cdd0d4b]">Demo2</td> 
+  <td>main@1876443073</td>   <td></td> </tr>
 </table>
