Annotations, Groups and Help Attributes

--- a/test-output/old/CRM Basics/classes.html
+++ b/test-output/old/CRM Basics/classes.html
@@ -12,7 +12,8 @@
 <tr>
 <td>&nbsp;</td>
 <td>WebLoginCRM</td>
-<td>&nbsp;</td></tr>
+<td>Smoke </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>MobileLoginCRM</td>
@@ -20,13 +21,18 @@
 <tr>
 <td>&nbsp;</td>
 <td>LoginAPICRM</td>
-<td>&nbsp;</td></tr>
+<td>Smoke </td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>BefoMeth</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
@@ -41,11 +47,28 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>CRMReports</td>
+<td>MobileCRMSettings</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
+<td>CRMReports</td>
+<td>Smoke </td>
+</tr>
+<tr>
+<td>&nbsp;</td>
 <td>CRMActivityList</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>MobileCRMContacts</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>MobileCRMGoals</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>MobileCRMReports</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -87,6 +110,10 @@
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
+<td>&nbsp;</td>
+<td>AftMeth</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
 <tr>
@@ -98,7 +125,8 @@
 <tr>
 <td>&nbsp;</td>
 <td>CRMUserProfile</td>
-<td>&nbsp;</td></tr>
+<td>Smoke </td>
+</tr>
 <tr>
 <td>&nbsp;</td>
 <td>CRMUserList</td>
