--- a/test-output/old/CRM Basics/groups.html
+++ b/test-output/old/CRM Basics/groups.html
@@ -1,1 +1,3 @@
-<h2>Groups used for this test run</h2>
+<h2>Groups used for this test run</h2><table border="1">
+<tr> <td align="center"><b>Group name</b></td><td align="center"><b>Methods</b></td></tr><tr><td>Smoke</td><td>day3.CRMReports()[pri:0, instance:Test.day3@20ccf40b]<br/>day1.LoginAPICRM()[pri:0, instance:Test.day1@2dde1bff]<br/>day1.WebLoginCRM()[pri:0, instance:Test.day1@2dde1bff]<br/>day4.CRMUserProfile()[pri:0, instance:Test.day4@4d465b11]<br/></td></tr>
+</table>
