--- a/test-output/old/CRM Basics/methods-alphabetical.html
+++ b/test-output/old/CRM Basics/methods-alphabetical.html
@@ -1,24 +1,52 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>CRM Basics</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="af606c">  <td>22/04/11 00:32:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day3.CRMActivityList()[pri:0, instance:Test.day3@212b5695]">CRMActivityList</td> 
-  <td>main@1014982340</td>   <td></td> </tr>
-<tr bgcolor="af606c">  <td>22/04/11 00:32:02</td>   <td>3</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day3.CRMReports()[pri:0, instance:Test.day3@212b5695]">CRMReports</td> 
-  <td>main@1014982340</td>   <td></td> </tr>
-<tr bgcolor="65a581">  <td>22/04/11 00:32:02</td>   <td>22</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day4.CRMUserList()[pri:0, instance:Test.day4@4de4b452]">CRMUserList</td> 
-  <td>main@1014982340</td>   <td></td> </tr>
-<tr bgcolor="65a581">  <td>22/04/11 00:32:02</td>   <td>28</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day4.CRMUserProfile()[pri:0, instance:Test.day4@4de4b452]">CRMUserProfile</td> 
-  <td>main@1014982340</td>   <td></td> </tr>
-<tr bgcolor="a9a8e4">  <td>22/04/11 00:32:02</td>   <td>-196</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day1.LoginAPICRM()[pri:0, instance:Test.day1@524d6d96]">LoginAPICRM</td> 
-  <td>main@1014982340</td>   <td></td> </tr>
-<tr bgcolor="689d9d">  <td>22/04/11 00:32:02</td>   <td>-156</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day2.LoginAPICRMDashboard()[pri:0, instance:Test.day2@770d3326]">LoginAPICRMDashboard</td> 
-  <td>main@1014982340</td>   <td></td> </tr>
-<tr bgcolor="a9a8e4">  <td>22/04/11 00:32:02</td>   <td>-178</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day1.MobileLoginCRM()[pri:0, instance:Test.day1@524d6d96]">MobileLoginCRM</td> 
-  <td>main@1014982340</td>   <td></td> </tr>
-<tr bgcolor="689d9d">  <td>22/04/11 00:32:02</td>   <td>-151</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day2.MobileLoginCRMDashboard()[pri:0, instance:Test.day2@770d3326]">MobileLoginCRMDashboard</td> 
-  <td>main@1014982340</td>   <td></td> </tr>
-<tr bgcolor="a9a8e4">  <td>22/04/11 00:32:02</td>   <td>-168</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day1.WebLoginCRM()[pri:0, instance:Test.day1@524d6d96]">WebLoginCRM</td> 
-  <td>main@1014982340</td>   <td></td> </tr>
-<tr bgcolor="689d9d">  <td>22/04/11 00:32:02</td>   <td>-146</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day2.WebLoginCRMDashboard()[pri:0, instance:Test.day2@770d3326]">WebLoginCRMDashboard</td> 
-  <td>main@1014982340</td>   <td></td> </tr>
+<tr bgcolor="7bacdf">  <td>22/04/11 23:19:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;day2.AftMeth()[pri:0, instance:Test.day2@223aa2f7]">&lt;&lt;AftMeth</td> 
+<td>&nbsp;</td>  <td>main@9797126</td>   <td></td> </tr>
+<tr bgcolor="7bacdf">  <td>22/04/11 23:19:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;day2.AftMeth()[pri:0, instance:Test.day2@223aa2f7]">&lt;&lt;AftMeth</td> 
+<td>&nbsp;</td>  <td>main@9797126</td>   <td></td> </tr>
+<tr bgcolor="7bacdf">  <td>22/04/11 23:19:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;day2.AftMeth()[pri:0, instance:Test.day2@223aa2f7]">&lt;&lt;AftMeth</td> 
+<td>&nbsp;</td>  <td>main@9797126</td>   <td></td> </tr>
+<tr bgcolor="a3e471">  <td>22/04/11 23:19:50</td>   <td>152</td> <td title="&lt;&lt;day1.AfterSuite()[pri:0, instance:Test.day1@2dde1bff]">&lt;&lt;AfterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@9797126</td>   <td></td> </tr>
+<tr bgcolor="a3e471">  <td>22/04/11 23:19:50</td>   <td>-21</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;day1.BefoMeth()[pri:0, instance:Test.day1@2dde1bff]">&gt;&gt;BefoMeth</td> 
+<td>&nbsp;</td>  <td>main@9797126</td>   <td></td> </tr>
+<tr bgcolor="a3e471">  <td>22/04/11 23:19:50</td>   <td>-21</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;day1.BefoMeth()[pri:0, instance:Test.day1@2dde1bff]">&gt;&gt;BefoMeth</td> 
+<td>&nbsp;</td>  <td>main@9797126</td>   <td></td> </tr>
+<tr bgcolor="a3e471">  <td>22/04/11 23:19:50</td>   <td>-21</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;day1.BefoMeth()[pri:0, instance:Test.day1@2dde1bff]">&gt;&gt;BefoMeth</td> 
+<td>&nbsp;</td>  <td>main@9797126</td>   <td></td> </tr>
+<tr bgcolor="93da86">  <td>22/04/11 23:19:50</td>   <td>-79</td> <td title="&gt;&gt;day3.BeforeSuite()[pri:0, instance:Test.day3@20ccf40b]">&gt;&gt;BeforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@9797126</td>   <td></td> </tr>
+<tr bgcolor="93da86">  <td>22/04/11 23:19:50</td>   <td>120</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day3.CRMActivityList()[pri:0, instance:Test.day3@20ccf40b]">CRMActivityList</td> 
+  <td>main@9797126</td>   <td></td> </tr>
+<tr bgcolor="93da86">  <td>22/04/11 23:19:50</td>   <td>126</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day3.CRMReports()[pri:0, instance:Test.day3@20ccf40b]">CRMReports</td> 
+  <td>main@9797126</td>   <td></td> </tr>
+<tr bgcolor="d4dc85">  <td>22/04/11 23:19:50</td>   <td>100</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day4.CRMUserList()[pri:0, instance:Test.day4@4d465b11]">CRMUserList</td> 
+  <td>main@9797126</td>   <td></td> </tr>
+<tr bgcolor="d4dc85">  <td>22/04/11 23:19:50</td>   <td>103</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day4.CRMUserProfile()[pri:0, instance:Test.day4@4d465b11]">CRMUserProfile</td> 
+  <td>main@9797126</td>   <td></td> </tr>
+<tr bgcolor="a3e471">  <td>22/04/11 23:19:50</td>   <td>-38</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day1.LoginAPICRM()[pri:0, instance:Test.day1@2dde1bff]">LoginAPICRM</td> 
+  <td>main@9797126</td>   <td></td> </tr>
+<tr bgcolor="7bacdf">  <td>22/04/11 23:19:50</td>   <td>-14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day2.LoginAPICRMDashboard()[pri:0, instance:Test.day2@223aa2f7]">LoginAPICRMDashboard</td> 
+  <td>main@9797126</td>   <td></td> </tr>
+<tr bgcolor="93da86">  <td>22/04/11 23:19:50</td>   <td>129</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day3.MobileCRMContacts()[pri:0, instance:Test.day3@20ccf40b]">MobileCRMContacts</td> 
+  <td>main@9797126</td>   <td></td> </tr>
+<tr bgcolor="93da86">  <td>22/04/11 23:19:50</td>   <td>140</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day3.MobileCRMGoals()[pri:0, instance:Test.day3@20ccf40b]">MobileCRMGoals</td> 
+  <td>main@9797126</td>   <td></td> </tr>
+<tr bgcolor="93da86">  <td>22/04/11 23:19:50</td>   <td>122</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day3.MobileCRMReports()[pri:0, instance:Test.day3@20ccf40b]">MobileCRMReports</td> 
+  <td>main@9797126</td>   <td></td> </tr>
+<tr bgcolor="93da86">  <td>22/04/11 23:19:50</td>   <td>133</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day3.MobileCRMSettings()[pri:0, instance:Test.day3@20ccf40b]">MobileCRMSettings</td> 
+  <td>main@9797126</td>   <td></td> </tr>
+<tr bgcolor="a3e471">  <td>22/04/11 23:19:50</td>   <td>-28</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day1.MobileLoginCRM()[pri:0, instance:Test.day1@2dde1bff]">MobileLoginCRM</td> 
+  <td>main@9797126</td>   <td></td> </tr>
+<tr bgcolor="7bacdf">  <td>22/04/11 23:19:50</td>   <td>-11</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day2.MobileLoginCRMDashboard()[pri:0, instance:Test.day2@223aa2f7]">MobileLoginCRMDashboard</td> 
+  <td>main@9797126</td>   <td></td> </tr>
+<tr bgcolor="a3e471">  <td>22/04/11 23:19:50</td>   <td>-21</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day1.WebLoginCRM()[pri:0, instance:Test.day1@2dde1bff]">WebLoginCRM</td> 
+  <td>main@9797126</td>   <td></td> </tr>
+<tr bgcolor="7bacdf">  <td>22/04/11 23:19:50</td>   <td>-4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day2.WebLoginCRMDashboard()[pri:0, instance:Test.day2@223aa2f7]">WebLoginCRMDashboard</td> 
+  <td>main@9797126</td>   <td></td> </tr>
+<tr bgcolor="a3e471">  <td>22/04/11 23:19:50</td>   <td>1</td> <td>&nbsp;</td><td title="&lt;&lt;day1.postRequisite()[pri:0, instance:Test.day1@2dde1bff]">&lt;&lt;postRequisite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@9797126</td>   <td></td> </tr>
+<tr bgcolor="a3e471">  <td>22/04/11 23:19:50</td>   <td>-70</td> <td>&nbsp;</td><td title="&gt;&gt;day1.preRequisite()[pri:0, instance:Test.day1@2dde1bff]">&gt;&gt;preRequisite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@9797126</td>   <td></td> </tr>
 </table>
