adding new files - Annotations, reports, listeners

--- a/test-output/old/CRM Basics/methods.html
+++ b/test-output/old/CRM Basics/methods.html
@@ -1,52 +1,56 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>CRM Basics</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7bacdf">  <td>22/04/11 23:19:50</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day2.WebLoginCRMDashboard()[pri:0, instance:Test.day2@223aa2f7]">WebLoginCRMDashboard</td> 
-  <td>main@9797126</td>   <td></td> </tr>
-<tr bgcolor="7bacdf">  <td>22/04/11 23:19:50</td>   <td>4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;day2.AftMeth()[pri:0, instance:Test.day2@223aa2f7]">&lt;&lt;AftMeth</td> 
-<td>&nbsp;</td>  <td>main@9797126</td>   <td></td> </tr>
-<tr bgcolor="a3e471">  <td>22/04/11 23:19:50</td>   <td>-17</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;day1.BefoMeth()[pri:0, instance:Test.day1@2dde1bff]">&gt;&gt;BefoMeth</td> 
-<td>&nbsp;</td>  <td>main@9797126</td>   <td></td> </tr>
-<tr bgcolor="a3e471">  <td>22/04/11 23:19:50</td>   <td>-34</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day1.LoginAPICRM()[pri:0, instance:Test.day1@2dde1bff]">LoginAPICRM</td> 
-  <td>main@9797126</td>   <td></td> </tr>
-<tr bgcolor="7bacdf">  <td>22/04/11 23:19:50</td>   <td>-10</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day2.LoginAPICRMDashboard()[pri:0, instance:Test.day2@223aa2f7]">LoginAPICRMDashboard</td> 
-  <td>main@9797126</td>   <td></td> </tr>
-<tr bgcolor="7bacdf">  <td>22/04/11 23:19:50</td>   <td>-7</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day2.MobileLoginCRMDashboard()[pri:0, instance:Test.day2@223aa2f7]">MobileLoginCRMDashboard</td> 
-  <td>main@9797126</td>   <td></td> </tr>
-<tr bgcolor="a3e471">  <td>22/04/11 23:19:50</td>   <td>-17</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day1.WebLoginCRM()[pri:0, instance:Test.day1@2dde1bff]">WebLoginCRM</td> 
-  <td>main@9797126</td>   <td></td> </tr>
-<tr bgcolor="a3e471">  <td>22/04/11 23:19:50</td>   <td>-17</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;day1.BefoMeth()[pri:0, instance:Test.day1@2dde1bff]">&gt;&gt;BefoMeth</td> 
-<td>&nbsp;</td>  <td>main@9797126</td>   <td></td> </tr>
-<tr bgcolor="a3e471">  <td>22/04/11 23:19:50</td>   <td>5</td> <td>&nbsp;</td><td title="&lt;&lt;day1.postRequisite()[pri:0, instance:Test.day1@2dde1bff]">&lt;&lt;postRequisite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@9797126</td>   <td></td> </tr>
-<tr bgcolor="7bacdf">  <td>22/04/11 23:19:50</td>   <td>4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;day2.AftMeth()[pri:0, instance:Test.day2@223aa2f7]">&lt;&lt;AftMeth</td> 
-<td>&nbsp;</td>  <td>main@9797126</td>   <td></td> </tr>
-<tr bgcolor="a3e471">  <td>22/04/11 23:19:50</td>   <td>-24</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day1.MobileLoginCRM()[pri:0, instance:Test.day1@2dde1bff]">MobileLoginCRM</td> 
-  <td>main@9797126</td>   <td></td> </tr>
-<tr bgcolor="a3e471">  <td>22/04/11 23:19:50</td>   <td>-66</td> <td>&nbsp;</td><td title="&gt;&gt;day1.preRequisite()[pri:0, instance:Test.day1@2dde1bff]">&gt;&gt;preRequisite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@9797126</td>   <td></td> </tr>
-<tr bgcolor="a3e471">  <td>22/04/11 23:19:50</td>   <td>-17</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;day1.BefoMeth()[pri:0, instance:Test.day1@2dde1bff]">&gt;&gt;BefoMeth</td> 
-<td>&nbsp;</td>  <td>main@9797126</td>   <td></td> </tr>
-<tr bgcolor="7bacdf">  <td>22/04/11 23:19:50</td>   <td>4</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;day2.AftMeth()[pri:0, instance:Test.day2@223aa2f7]">&lt;&lt;AftMeth</td> 
-<td>&nbsp;</td>  <td>main@9797126</td>   <td></td> </tr>
-<tr bgcolor="d4dc85">  <td>22/04/11 23:19:50</td>   <td>104</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day4.CRMUserList()[pri:0, instance:Test.day4@4d465b11]">CRMUserList</td> 
-  <td>main@9797126</td>   <td></td> </tr>
-<tr bgcolor="d4dc85">  <td>22/04/11 23:19:50</td>   <td>107</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day4.CRMUserProfile()[pri:0, instance:Test.day4@4d465b11]">CRMUserProfile</td> 
-  <td>main@9797126</td>   <td></td> </tr>
-<tr bgcolor="93da86">  <td>22/04/11 23:19:50</td>   <td>137</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day3.MobileCRMSettings()[pri:0, instance:Test.day3@20ccf40b]">MobileCRMSettings</td> 
-  <td>main@9797126</td>   <td></td> </tr>
-<tr bgcolor="93da86">  <td>22/04/11 23:19:50</td>   <td>144</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day3.MobileCRMGoals()[pri:0, instance:Test.day3@20ccf40b]">MobileCRMGoals</td> 
-  <td>main@9797126</td>   <td></td> </tr>
-<tr bgcolor="a3e471">  <td>22/04/11 23:19:50</td>   <td>156</td> <td title="&lt;&lt;day1.AfterSuite()[pri:0, instance:Test.day1@2dde1bff]">&lt;&lt;AfterSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@9797126</td>   <td></td> </tr>
-<tr bgcolor="93da86">  <td>22/04/11 23:19:50</td>   <td>130</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day3.CRMReports()[pri:0, instance:Test.day3@20ccf40b]">CRMReports</td> 
-  <td>main@9797126</td>   <td></td> </tr>
-<tr bgcolor="93da86">  <td>22/04/11 23:19:50</td>   <td>124</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day3.CRMActivityList()[pri:0, instance:Test.day3@20ccf40b]">CRMActivityList</td> 
-  <td>main@9797126</td>   <td></td> </tr>
-<tr bgcolor="93da86">  <td>22/04/11 23:19:50</td>   <td>-75</td> <td title="&gt;&gt;day3.BeforeSuite()[pri:0, instance:Test.day3@20ccf40b]">&gt;&gt;BeforeSuite</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@9797126</td>   <td></td> </tr>
-<tr bgcolor="93da86">  <td>22/04/11 23:19:50</td>   <td>126</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day3.MobileCRMReports()[pri:0, instance:Test.day3@20ccf40b]">MobileCRMReports</td> 
-  <td>main@9797126</td>   <td></td> </tr>
-<tr bgcolor="93da86">  <td>22/04/11 23:19:50</td>   <td>133</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day3.MobileCRMContacts()[pri:0, instance:Test.day3@20ccf40b]">MobileCRMContacts</td> 
-  <td>main@9797126</td>   <td></td> </tr>
+<tr bgcolor="b9b8c9">  <td>22/04/13 00:28:53</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;day1.preRequisite()[pri:0, instance:Test.day1@50ad3bc1]">&gt;&gt;preRequisite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@344640127</td>   <td></td> </tr>
+<tr bgcolor="b798bb">  <td>22/04/13 00:28:53</td>   <td>143</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;day2.AftMeth()[pri:0, instance:Test.day2@2fd1433e]">&lt;&lt;AftMeth</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@344640127</td>   <td></td> </tr>
+<tr bgcolor="b798bb">  <td>22/04/13 00:28:53</td>   <td>143</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;day2.AftMeth()[pri:0, instance:Test.day2@2fd1433e]">&lt;&lt;AftMeth</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@344640127</td>   <td></td> </tr>
+<tr bgcolor="b9b8c9">  <td>22/04/13 00:28:53</td>   <td>101</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;day1.BefoMeth()[pri:0, instance:Test.day1@50ad3bc1]">&gt;&gt;BefoMeth</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@344640127</td>   <td></td> </tr>
+<tr bgcolor="b798bb">  <td>22/04/13 00:28:53</td>   <td>143</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;day2.AftMeth()[pri:0, instance:Test.day2@2fd1433e]">&lt;&lt;AftMeth</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@344640127</td>   <td></td> </tr>
+<tr bgcolor="b9b8c9">  <td>22/04/13 00:28:53</td>   <td>45</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day1.LoginAPICRM()[pri:0, instance:Test.day1@50ad3bc1]">LoginAPICRM</td> 
+  <td>TestNG-tests-1@344640127</td>   <td></td> </tr>
+<tr bgcolor="b9b8c9">  <td>22/04/13 00:28:53</td>   <td>102</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day1.WebLoginCRM(java.lang.String,java.lang.String)[pri:0, instance:Test.day1@50ad3bc1]">WebLoginCRM</td> 
+  <td>TestNG-tests-1@344640127</td>   <td></td> </tr>
+<tr bgcolor="b798bb">  <td>22/04/13 00:28:53</td>   <td>123</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day2.LoginAPICRMDashboard(java.lang.String)[pri:0, instance:Test.day2@2fd1433e]">LoginAPICRMDashboard</td> 
+  <td>TestNG-tests-1@344640127</td>   <td></td> </tr>
+<tr bgcolor="b9b8c9">  <td>22/04/13 00:28:53</td>   <td>101</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;day1.BefoMeth()[pri:0, instance:Test.day1@50ad3bc1]">&gt;&gt;BefoMeth</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@344640127</td>   <td></td> </tr>
+<tr bgcolor="b798bb">  <td>22/04/13 00:28:53</td>   <td>131</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day2.MobileLoginCRMDashboard()[pri:0, instance:Test.day2@2fd1433e]">MobileLoginCRMDashboard</td> 
+  <td>TestNG-tests-1@344640127</td>   <td></td> </tr>
+<tr bgcolor="b9b8c9">  <td>22/04/13 00:28:53</td>   <td>101</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;day1.BefoMeth()[pri:0, instance:Test.day1@50ad3bc1]">&gt;&gt;BefoMeth</td> 
+<td>&nbsp;</td>  <td>TestNG-tests-1@344640127</td>   <td></td> </tr>
+<tr bgcolor="b798bb">  <td>22/04/13 00:28:53</td>   <td>137</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day2.WebLoginCRMDashboard()[pri:0, instance:Test.day2@2fd1433e]">WebLoginCRMDashboard</td> 
+  <td>TestNG-tests-1@344640127</td>   <td></td> </tr>
+<tr bgcolor="b9b8c9">  <td>22/04/13 00:28:53</td>   <td>146</td> <td>&nbsp;</td><td title="&lt;&lt;day1.postRequisite()[pri:0, instance:Test.day1@50ad3bc1]">&lt;&lt;postRequisite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>TestNG-tests-1@344640127</td>   <td></td> </tr>
+<tr bgcolor="b9b8c9">  <td>22/04/13 00:28:53</td>   <td>61</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day1.MobileLoginCRM()[pri:0, instance:Test.day1@50ad3bc1]">MobileLoginCRM</td> 
+  <td>TestNG-tests-1@344640127</td>   <td></td> </tr>
+<tr bgcolor="a6bb71">  <td>22/04/13 00:28:53</td>   <td>396</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day4.CRMUserList(java.lang.String,java.lang.String)[pri:0, instance:Test.day4@2f217633]">CRMUserList</td> 
+  <td>TestNG-tests-1@344640127</td>   <td></td> </tr>
+<tr bgcolor="a6bb71">  <td>22/04/13 00:28:53</td>   <td>396</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day4.CRMUserList(java.lang.String,java.lang.String)[pri:0, instance:Test.day4@2f217633]">CRMUserList</td> 
+  <td>TestNG-tests-1@344640127</td>   <td></td> </tr>
+<tr bgcolor="a6bb71">  <td>22/04/13 00:28:53</td>   <td>396</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day4.CRMUserList(java.lang.String,java.lang.String)[pri:0, instance:Test.day4@2f217633]">CRMUserList</td> 
+  <td>TestNG-tests-1@344640127</td>   <td></td> </tr>
+<tr bgcolor="a6bb71">  <td>22/04/13 00:28:53</td>   <td>412</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day4.CRMUserProfile()[pri:0, instance:Test.day4@2f217633]">CRMUserProfile</td> 
+  <td>TestNG-tests-1@344640127</td>   <td></td> </tr>
+<tr bgcolor="b9b8c9">  <td>22/04/13 00:28:53</td>   <td>513</td> <td title="&lt;&lt;day1.AfterSuite()[pri:0, instance:Test.day1@50ad3bc1]">&lt;&lt;AfterSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@538592647</td>   <td></td> </tr>
+<tr bgcolor="d28fa7">  <td>22/04/13 00:28:53</td>   <td>499</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day3.MobileCRMGoals()[pri:0, instance:Test.day3@4fb3ee4e]">MobileCRMGoals</td> 
+  <td>TestNG-tests-1@344640127</td>   <td></td> </tr>
+<tr bgcolor="d28fa7">  <td>22/04/13 00:28:53</td>   <td>446</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day3.CRMReports()[pri:0, instance:Test.day3@4fb3ee4e]">CRMReports</td> 
+  <td>TestNG-tests-1@344640127</td>   <td></td> </tr>
+<tr bgcolor="d28fa7">  <td>22/04/13 00:28:53</td>   <td>453</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day3.MobileCRMContacts()[pri:0, instance:Test.day3@4fb3ee4e]">MobileCRMContacts</td> 
+  <td>TestNG-tests-1@344640127</td>   <td></td> </tr>
+<tr bgcolor="d28fa7">  <td>22/04/13 00:28:53</td>   <td>462</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day3.MobileCRMReports(java.lang.String)[pri:0, instance:Test.day3@4fb3ee4e]">MobileCRMReports</td> 
+  <td>TestNG-tests-1@344640127</td>   <td></td> </tr>
+<tr bgcolor="d28fa7">  <td>22/04/13 00:28:53</td>   <td>482</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day3.MobileCRMSettings()[pri:0, instance:Test.day3@4fb3ee4e]">MobileCRMSettings</td> 
+  <td>TestNG-tests-1@344640127</td>   <td></td> </tr>
+<tr bgcolor="d28fa7">  <td>22/04/13 00:28:53</td>   <td>-17</td> <td title="&gt;&gt;day3.BeforeSuite()[pri:0, instance:Test.day3@4fb3ee4e]">&gt;&gt;BeforeSuite</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@538592647</td>   <td></td> </tr>
+<tr bgcolor="d28fa7">  <td>22/04/13 00:28:53</td>   <td>443</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="day3.CRMActivityList()[pri:0, instance:Test.day3@4fb3ee4e]">CRMActivityList</td> 
+  <td>TestNG-tests-1@344640127</td>   <td></td> </tr>
 </table>
