--- a/test-output/old/CRM Basics/toc.html
+++ b/test-output/old/CRM Basics/toc.html
@@ -20,6 +20,14 @@
 <td><a target='mainFrame' href='reporter-output.html'>reporter output</a></td>
 <td><a target='mainFrame' href='testng.xml.html'>testng.xml</a></td>
 </tr></table>
+<table width='100%' class='test-failed'>
+<tr><td>
+<table style='width: 100%'><tr><td valign='top'>Login (5/1/0)</td><td valign='top' align='right'>
+  <a href='Login.html' target='mainFrame'>Results</a>
+</td></tr></table>
+</td></tr><p/>
+</table>
+
 <table width='100%' class='test-passed'>
 <tr><td>
 <table style='width: 100%'><tr><td valign='top'>ActivityReport (6/0/0)</td><td valign='top' align='right'>
@@ -30,15 +38,7 @@
 
 <table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Login (6/0/0)</td><td valign='top' align='right'>
-  <a href='Login.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-passed'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>Settings (2/0/0)</td><td valign='top' align='right'>
+<table style='width: 100%'><tr><td valign='top'>Settings (4/0/0)</td><td valign='top' align='right'>
   <a href='Settings.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
